arc v1.1.4 (Release date: 2017-12-26)
==============
Changes

* Added QCBA as a suggested package

arc v1.1.3 (Release date: 2017-11-15)
==============
Changes

* Replaced deprecated evalWithTimeout() with withTimeout()
* Small improvements in source code documentation
